# django-ecs-terraform

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  celery_worker_start.sh  django_start.sh  docker-compose.yml  entrypoint.sh  flower_start.sh  pyproject.toml  testing.py
backend/apps/: urls.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/accounts/models/: users.py
backend/apps/shared/: abstract_base_model.py  custom_response.py
backend/apps/tasks/: admin.py  consumers.py  routing.py  task.py  urls.py
backend/apps/tasks/migrations/: 0001_initial.py
backend/apps/tasks/models/: __init__.py  sub_tasks.py  tasks.py
backend/apps/tasks/serializers/: sub_task.py  task.py
backend/apps/tasks/views/: task.py
backend/core/: asgi.py  celery.py  settings.py  urls.py
terraform/: main.tf  outputs.tf  plan.tfplan  variable.tf
terraform/modules/alb/: main.tf  outputs.tf  variable.tf
terraform/modules/ecs/: ecs-service.tf  ecs-task.tf  main.tf  outputs.tf  variable.tf
terraform/modules/ecs_celery/: main.tf  outputs.tf  variables.tf
terraform/modules/ecs_flower/: ecs-service.tf  ecs-task.tf  outputs.tf  variables.tf
terraform/modules/iam/: main.tf
terraform/modules/network/: main.tf  outputs.tf  variable.tf
terraform/modules/postgres/: main.tf  outputs.tf  variable.tf
terraform/modules/redis/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/security-groups/: main.tf  outputs.tf  variable.tf
